	  the -o option is not standard and is not supported under, for example, OS-X or
	  Solaris.  This was solved by changing all 'uname -o' references to the more
	  complex:  'uname -o 2>/dev/null || echo "Other"'
	* drivers/usbhost/usbhost_enumerate.c -- Add logic to get the VID and PID.  This
	  is necessary in order to support vendor-specific USB devices.
	* examplex/wlan, configs/olimex-lpc1766stk/wlan, drivers/usbhost/usbhost_rtl8187.c,
	  Add infrastructure to support RTL18187 wireless USB.
	* configs/nucleus2g -- backed out USB host changes... wrong board.
	* Renamed arc/hc/include/mc9s12ne64 and src/mc9s12ne64 -- m9s12.  That name is
	  shorter and more general.
	* The NuttX repository has been converted to SVN and can now be found here
	  http://nuttx.svn.sourceforge.net/viewvc/nuttx/
	* configs/mbed/hidkbd -- Added USB host support for the mbed LPC1768 board; add
	  a USB host HID keyboard configuraion.
	* drivers/usbhost/hid_parser.c -- Leverages the LUFA HID parser written by
	  Dean Camera.
	* examples/nsh -- Correct an usage of getopt(): If you stop calling getopt()
	  before all parameters are parsed, you can leave getopt() in a strange state.
	* Rename arch/pjrc-8051 to arch/8051
	* configs/ne64badge -- Add a configuration for the Future Electronics Group
	  NE64 Badge development board (Freescale MC9S12NE64)
	* Changes contributed by Uros Platise:
	  - Add support for the STM32F103RET6
	  - configs/vsn - Support for the ISOTEL NetClamps VSN V1.2 ready2go sensor
	    network platform
	* arch/hc, configs/ne64badge -- Development is complete for the Freescale
	  mc9s12ne64 on the Future Electronics Group NE64 /PoE Badge board.  Howeve,
	  this port remains untested until I figure out this BDM / Code Warrior
	  and paged build thing
	* Added a new 'kill' command to NSH that will support sending signals to
	  running NuttX tasks.

5.19 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>