@@ -1,4 +1,4 @@
-NuttX TODO List (Last updated February 24, 2011)
+NuttX TODO List (Last updated February 28, 2011)
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
   (5)  Task/Scheduler (sched/)
@@ -19,7 +19,7 @@ NuttX TODO List (Last updated February 24, 2011)
   (5)  Build system / Toolchains
   (4)  NuttShell (NSH) (examples/nsh)
   (3)  Other Applications & Tests (examples/)
-  (5)  Linux/Cywgin simulation (arch/sim)
+  (7)  Linux/Cywgin simulation (arch/sim)
   (3)  ARM (arch/arm/)
   (1)  ARM/C5471 (arch/arm/src/c5471/)
   (3)  ARM/DM320 (arch/arm/src/dm320/)
@@ -616,6 +616,25 @@ o Linux/Cywgin simulation (arch/sim)
                irqrestore() to block and (conditionally) unblock the signal.
   Status:      Open
   Priority:    Low
+  
+  Descripion:  The NSH example has some odd behaviors.  Mult-tasking -- for example,
+               execution of commands in background -- does not work normally.  This
+               is due to the fact that NSH uses the system standard input for the
+               console.  This means that the simulation is actually "frozen" all of
+               the time when NSH is waiting for input and background commands never
+               get the chance to run.
+  Status:      Open
+  Priority:    This will not be fixed.  This is the normal behavior in the current
+               design of the simulator.  "Real" platforms will behave correctly
+               because NSH will "sleep" when it waits for console inpu and other
+               tasks can run freely.
+
+  Description: In the NSH example, the host HOST echoes each command so after you
+               you enter a command, the command is repeated on the next line.  This
+               is an artifact of the simulator only.
+  Status:      Open
+  Priority:    This will not be fixed.  This is the normal behavior in the current
+               design of the simulator.  "Real" platforms will behave correctly.
 
 o ARM (arch/arm/)
   ^^^^^^^^^^^^^^^
