@@ -37,7 +37,8 @@
 -include $(TOPDIR)/Make.defs
 
 ASRCS	= 
-CSRCS	= nsh_main.c nsh_fscmds.c nsh_ddcmd.c nsh_proccmds.c nsh_envcmds.c nsh_dbgcmds.c
+CSRCS	= nsh_main.c nsh_fscmds.c nsh_ddcmd.c nsh_proccmds.c nsh_mmcmds.c \
+		  nsh_envcmds.c nsh_dbgcmds.c
 
 ifeq ($(CONFIG_EXAMPLES_NSH_ROMFSETC),y)
 CSRCS	+= nsh_romfsetc.c
